Bug 1958985 - Don't allow a generated-content block as a "result frame" in GetNextPrevLineFromBlockFrame. r=layout-reviewers,emilio

If we return the generated-content block, PeekOffsetForLine will descend
into it, and then determine it isn't a valid result, and move on from the
desired target line. Excluding the generated-content block allows us to
properly return the next (or previous) frame on the line instead.

Differential Revision: https://phabricator.services.mozilla.com/D245902